# bevy-multiplayer-3d

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RENET_REPLICON_SETUP.md
assets/media/: ECS.excalidraw  presentation.excalidraw
assets/models/: README.md  gun.glb  player.glb
src/: main.rs
src/game/: mod.rs
src/game/cursor/: mod.rs
src/game/enemy/: components.rs  systems.rs
src/game/player/: camera_controller.rs  components.rs  input.rs  mod.rs  movement.rs  rendering.rs  shooting.rs  systems.rs
src/game/shooting/: mod.rs
src/game/ui/: crosshair.rs  mod.rs
src/game/world/: mod.rs  setup.rs  state.rs
src/network/: client.rs  mod.rs  protocol.rs  server.rs
